s/src\/store/src\/stores/g

--- a/example-storage.html
+++ b/example-storage.html
@@ -8,8 +8,8 @@
 <script type="text/javascript" src="src/unicode/categ_letters_numbers.js"></script>
 <script type="text/javascript" src="src/unicode/normalizer_lowercase_nomark.js"></script>
 <script type="text/javascript" src="src/unicode/unicode.js"></script>
-<script type="text/javascript" src="src/store/memory_store.js"></script>
-<script type="text/javascript" src="src/store/websql_store.js"></script>
+<script type="text/javascript" src="src/stores/memory_store.js"></script>
+<script type="text/javascript" src="src/stores/websql_store.js"></script>
 <script type="text/javascript" src="src/analyzers.js"></script>
 <script type="text/javascript" src="src/normalizers.js"></script>
 <script type="text/javascript" src="src/resultsets.js"></script>
