--- a/examples/animals/animals.html
+++ b/examples/animals/animals.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../../src/utils.js"></script>
 <script type="text/javascript" src="../../src/engine.js"></script>
 <script type="text/javascript" src="../../src/resultsets.js"></script>
-<script type="text/javascript" src="../../src/store/memory_store.js"></script>
+<script type="text/javascript" src="../../src/stores/memory_store.js"></script>
 
 <script type="text/javascript" src="animals.js"></script>
 
