--- a/tests/stores.html
+++ b/tests/stores.html
@@ -6,8 +6,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript" src="../src/resultsets.js"></script>
 <script type="text/javascript" src="../src/analyzers.js"></script>
-<script type="text/javascript" src="../src/store/memory_store.js"></script>
-<script type="text/javascript" src="../src/store/websql_store.js"></script>
+<script type="text/javascript" src="../src/stores/memory_store.js"></script>
+<script type="text/javascript" src="../src/stores/websql_store.js"></script>
 
 
 <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
