refactored stores & associated tests

--- a/tests/stores.html
+++ b/tests/stores.html
@@ -8,11 +8,14 @@
 <script type="text/javascript" src="../src/analyzers.js"></script>
 <script type="text/javascript" src="../src/stores/memory_store.js"></script>
 <script type="text/javascript" src="../src/stores/websql_store.js"></script>
+<script type="text/javascript" src="../src/utils.js"></script>
+<script type="text/javascript" src="../src/resultsets.js"></script>
 
 
 <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
 <link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-git.css"></link>
 
+<script type="text/javascript" src="common-testutils.js"></script>
 <script type="text/javascript" src="test-stores.js"></script>
 
 <style TYPE="text/css">
