added some jsdoc documentation

--- a/examples/animals/animals.html
+++ b/examples/animals/animals.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="../../src/normalizers/english/porter-stemmer.js"></script>
 
 <script type="text/javascript" src="../../src/utils.js"></script>
+<script type="text/javascript" src="../../src/common-engine.js"></script>
 <script type="text/javascript" src="../../src/boolean-engine.js"></script>
 <script type="text/javascript" src="../../src/resultsets.js"></script>
 <script type="text/javascript" src="../../src/storemanager.js"></script>
