--- a/tests/engine-boolean.html
+++ b/tests/engine-boolean.html
@@ -13,7 +13,9 @@
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/resultsets.js"></script>
 <script type="text/javascript" src="../src/boolean-engine.js"></script>
+<script type="text/javascript" src="../src/common-engine.js"></script>
 <script type="text/javascript" src="../src/storemanager.js"></script>
+<script type="text/javascript" src="../src/capabilities.js"></script>
 
 
 <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
