--- a/tests/stores.html
+++ b/tests/stores.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="../src/stores/websql_store.js"></script>
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/resultsets.js"></script>
+<script type="text/javascript" src="../src/capabilities.js"></script>
 
 
 <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
