--- a/tests/storemanager.html
+++ b/tests/storemanager.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="../src/resultsets.js"></script>
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/storemanager.js"></script>
+<script type="text/javascript" src="../src/capabilities.js"></script>
 
 <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
 <link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-git.css"></link>
