engines prototyping chain

--- a/examples/animals/animals.html
+++ b/examples/animals/animals.html
@@ -12,10 +12,12 @@
 <script type="text/javascript" src="../../src/analyzers.js"></script>
 <script type="text/javascript" src="../../src/normalizers.js"></script>
 <script type="text/javascript" src="../../src/normalizers/english/porter-stemmer.js"></script>
+<script type="text/javascript" src="../../src/misc/dataloader.js"></script>
+<script type="text/javascript" src="../../src/capabilities.js"></script>
 
 <script type="text/javascript" src="../../src/utils.js"></script>
-<script type="text/javascript" src="../../src/common-engine.js"></script>
 <script type="text/javascript" src="../../src/boolean-engine.js"></script>
+<script type="text/javascript" src="../../src/common-engine.js"></script>
 <script type="text/javascript" src="../../src/resultsets.js"></script>
 <script type="text/javascript" src="../../src/storemanager.js"></script>
 <script type="text/javascript" src="../../src/stores/memory_store.js"></script>
