--- a/tests/normalizers.html
+++ b/tests/normalizers.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="../src/unicode/unicode.js"></script>
 <script type="text/javascript" src="../src/analyzers.js"></script>
 <script type="text/javascript" src="../src/normalizers.js"></script>
+<script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/normalizers/english/porter-stemmer.js"></script>
 
 
