indexeddb storage added

--- a/tests/stores.html
+++ b/tests/stores.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="../src/analyzers.js"></script>
 <script type="text/javascript" src="../src/stores/memory_store.js"></script>
 <script type="text/javascript" src="../src/stores/websql_store.js"></script>
+<script type="text/javascript" src="../src/stores/indexeddb_store.js"></script>
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/resultsets.js"></script>
 <script type="text/javascript" src="../src/capabilities.js"></script>
