updated examples with new api

--- a/examples/animals/animals.html
+++ b/examples/animals/animals.html
@@ -100,7 +100,8 @@ $(document).ready(function() {
 	$("#typehere").change(search);
 	$("#reload").click(function() {
 		Animals.reloadDatabase(function() {
-			window.location.reload(true);
+				window.location.reload(true);
+			console.log("RELOAD!");
 		});	
 	});
 	
