--- a/examples/example-storage.html
+++ b/examples/example-storage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Javascript Search Engine : parser testing</title>
+<title>Javascript Search Engine : Index stores testing</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 
 <script type="text/javascript" src="../src/unicode/categ_letters_numbers.js"></script>
@@ -39,11 +39,11 @@ textarea.typebox {
 </style>
 </head>
 <body>
-<h1>Testing storage engines</h1>
+<h1>Testing storage</h1>
 
 Search engines need to store their data, mainly a set of indexes, On the client-side, things get
 at little complicated, specially on devices with little memory or bad/old browsers. Here are the
-different storage engines supported by the library.
+different storage flavours supported by the library.
 <ul>
 <li><em>memory index</em>: stores all the data in memory (actually a javascript object). The advantages of 
 this index are compatibility with all browser, and obviously its speed. However, the index needs to be
@@ -136,14 +136,14 @@ $(document).ready(function() {
 	var under_test = [
        	    {
        	    	label: "memory store",
-       	    	engine: new fullproof.store.MemoryStore(),
+       	    	store: new fullproof.store.MemoryStore(),
        	    	parameters: new fullproof.Capabilities(),
        	    	indexName: "testidx",
        	    	parser: parser_for_all
        	    },
        	    {
       	    	label: "websql store",
-      	    	engine: new fullproof.store.WebSQLStore(),
+      	    	store: new fullproof.store.WebSQLStore(),
       	    	parameters: new fullproof.Capabilities({dbName:"testsearch", dbSize: 1024*1024*20}),
       	    	parser: parser_for_all,
       	    	indexName: "testidx"
@@ -160,13 +160,14 @@ $(document).ready(function() {
 		$("#results").append(function() {
 			return "<div class='floatbox'>"+obj.label+"<div class='resultbox' id='"+obj.id+"'></div></div>";
 		});
-		
-		obj.engine.openStore(obj.parameters, function(store) {
-			store.openIndex(obj.indexName, obj.parameters, undefined, function(index) {
-				 obj.index = index;
+
+		var ireq =new fullproof.IndexRequest(obj.indexName, obj.parameters);
+		(function(obj) {
+			obj.store.open(obj.parameters, [ireq], function() {
+				 obj.index = obj.store.getIndex(obj.indexName);
 				 sync_index_opened();
 			});
-		});
+		})(obj);
 	}
 	
 	$("#action").click(storeContent);
