second index now uses metaphone

--- a/examples/animals/animals.html
+++ b/examples/animals/animals.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="../../src/analyzers.js"></script>
 <script type="text/javascript" src="../../src/normalizers.js"></script>
 <script type="text/javascript" src="../../src/normalizers/english/porter-stemmer.js"></script>
+<script type="text/javascript" src="../../src/normalizers/english/metaphone.js"></script>
 <script type="text/javascript" src="../../src/misc/dataloader.js"></script>
 <script type="text/javascript" src="../../src/capabilities.js"></script>
 
