--- a/examples/animals/animals.html
+++ b/examples/animals/animals.html
@@ -5,6 +5,7 @@
 <title>Fullproof example: Animals species database</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 
+<!-- START DEV SCRIPTS -->
 <script type="text/javascript" src="../../src/unicode/categ_letters_numbers.js"></script>
 <script type="text/javascript" src="../../src/unicode/normalizer_lowercase_nomark.js"></script>
 <script type="text/javascript" src="../../src/unicode/unicode.js"></script>
@@ -24,8 +25,9 @@
 <script type="text/javascript" src="../../src/stores/memory_store.js"></script>
 <script type="text/javascript" src="../../src/stores/websql_store.js"></script>
 <script type="text/javascript" src="../../src/stores/indexeddb_store.js"></script>
+<!-- END DEV SCRIPTS -->
 
-<script type="text/javascript" src="animals.js"></script>
+    <script type="text/javascript" src="animals.js"></script>
 
 <style TYPE="text/css">
 
