--- a/examples/colors/colors.html
+++ b/examples/colors/colors.html
@@ -4,10 +4,11 @@
 <meta charset="UTF-8">
 <title>Fullproof example: Color Names</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="res/simplecssgrid-720.css" />
-    <link rel="stylesheet" type="text/css" href="res/colors.css" />
+<link rel="stylesheet" type="text/css" href="res/simplecssgrid-720.css" />
+<link rel="stylesheet" type="text/css" href="res/colors.css" />
 
-    <script type="text/javascript" src="../../src/unicode/categ_letters_numbers.js"></script>
+<!-- START DEV SCRIPTS -->
+<script type="text/javascript" src="../../src/unicode/categ_letters_numbers.js"></script>
 <script type="text/javascript" src="../../src/unicode/normalizer_lowercase_nomark.js"></script>
 <script type="text/javascript" src="../../src/unicode/unicode.js"></script>
 
@@ -26,6 +27,7 @@
 <script type="text/javascript" src="../../src/stores/memory_store.js"></script>
 <script type="text/javascript" src="../../src/stores/websql_store.js"></script>
 <script type="text/javascript" src="../../src/stores/indexeddb_store.js"></script>
+<!-- END DEV SCRIPTS -->
 
 </head>
 <body class="">
