--- a/tests/stores.html
+++ b/tests/stores.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Javascript Search Engine : Analyzers testing</title>
+<title>Javascript Search Engine : Stores testing</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript" src="../src/resultsets.js"></script>
 <script type="text/javascript" src="../src/analyzers.js"></script>
