--- a/tests/engine-boolean.html
+++ b/tests/engine-boolean.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Javascript Search Engine : Analyzers testing</title>
+<title>Javascript Search Engine : BooleanEngine testing</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript" src="../src/unicode/categ_letters_numbers.js"></script>
 <script type="text/javascript" src="../src/unicode/normalizer_lowercase_nomark.js"></script>
