--- a/tests/storemanager.html
+++ b/tests/storemanager.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Javascript Search Engine : Analyzers testing</title>
+<title>Javascript Search Engine : StoreManager</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript" src="../src/stores/memory_store.js"></script>
 <script type="text/javascript" src="../src/stores/websql_store.js"></script>
