--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li>Configurable and very easely extensible parsing and token normalization system</li>
 <li>Easy to integrate, zero external dependency, ~100k minified</li>
 </ul>
-<p>Note the fullproof is NOT a document management system, it does only one thing: provide fulltext search to your application, it does not aim at storing documents or data.</p>
+<p>Note that fullproof is NOT a document management system, it does only one thing: provide fulltext search to your application, it does not aim at storing documents or data.</p>
 <h3 id="some-screenshots"> Some Screenshots</h3>
 <div id="screenshots">
 <p>A few screenshots from the examples.</p>
