fix dbSize issue

--- a/examples/colors/colors.html
+++ b/examples/colors/colors.html
@@ -26,7 +26,9 @@
 <script type="text/javascript" src="../../src/storemanager.js"></script>
 <script type="text/javascript" src="../../src/stores/memory_store.js"></script>
 <script type="text/javascript" src="../../src/stores/websql_store.js"></script>
-<script type="text/javascript" src="../../src/stores/indexeddb_store.js"></script>
+    <script type="text/javascript" src="../../src/stores/indexeddb_store.js"></script>
+
+    <script type="text/javascript" src="../../src/debug/inlinelog.js"></script>
 <!-- END DEV SCRIPTS -->
 
 </head>
@@ -57,7 +59,7 @@
 <div class="grid">
     <div id="results"></div>
 </div>
-
+<div id="debug"></div>
 
 <script type="text/javascript">
 
@@ -127,7 +129,12 @@ function engineReady(b) {
 }
 
 $(document).ready(function() {
+
+    // window.installInlineConsole("debug");
+
     var dbName = "colors";
+//    var onlyMem = [new fullproof.StoreDescriptor("memorystore", fullproof.store.IndexedDBStore)];
+    // onlyMem
     var colorSearchEngine = new fullproof.BooleanEngine();
 
     // Loads the color data from the csv, then creates the index descriptors and uses them to open the indexes
