removes debug trace

--- a/examples/mame/mamesearch.html
+++ b/examples/mame/mamesearch.html
@@ -64,7 +64,7 @@
 
 $(document).ready(function() {
 
-    window.installInlineConsole("debug");
+//    window.installInlineConsole("debug");
 
 	MameSearch.start(function(i) {
 		if (i) {
