--- a/examples/example-analyzers.html
+++ b/examples/example-analyzers.html
@@ -4,13 +4,14 @@
 <meta charset="UTF-8">
 <title>Javascript Search Engine : Analyzers testing</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script type="text/javascript" src="src/unicode/categ_letters_numbers.js"></script>
-<script type="text/javascript" src="src/unicode/normalizer_lowercase_nomark.js"></script>
-<script type="text/javascript" src="src/unicode/unicode.js"></script>
-<script type="text/javascript" src="src/analyzers.js"></script>
-<script type="text/javascript" src="src/normalizers.js"></script>
-<script type="text/javascript" src="src/normalizers/english/porter-stemmer.js"></script>
-<script type="text/javascript" src="src/normalizers/french/simpleform.js"></script>
+
+<script type="text/javascript" src="../src/unicode/categ_letters_numbers.js"></script>
+<script type="text/javascript" src="../src/unicode/normalizer_lowercase_nomark.js"></script>
+<script type="text/javascript" src="../src/unicode/unicode.js"></script>
+<script type="text/javascript" src="../src/analyzers.js"></script>
+<script type="text/javascript" src="../src/normalizers.js"></script>
+<script type="text/javascript" src="../src/normalizers/english/porter-stemmer.js"></script>
+<script type="text/javascript" src="../src/normalizers/french/simpleform.js"></script>
 <style TYPE="text/css">
 
 div.floatbox {
