--- a/tests/normalizers.html
+++ b/tests/normalizers.html
@@ -3,21 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <title>Javascript Search Engine : Analyzers testing</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script type="text/javascript" src="../src/unicode/categ_letters_numbers.js"></script>
-<script type="text/javascript" src="../src/unicode/normalizer_lowercase_nomark.js"></script>
-<script type="text/javascript" src="../src/unicode/normalizer_lowercase.js"></script>
-<script type="text/javascript" src="../src/unicode/unicode.js"></script>
-<script type="text/javascript" src="../src/analyzers.js"></script>
-<script type="text/javascript" src="../src/normalizers.js"></script>
-<script type="text/javascript" src="../src/utils.js"></script>
-<script type="text/javascript" src="../src/normalizers/english/porter-stemmer.js"></script>
+    <script src="libs/jquery-1.8.2.min.js"></script>
+    <script src="libs/qunit-1.10.0.js"></script>
+    <link rel="stylesheet" type="text/css" href="libs/qunit-1.10.0.css" />
 
+    <script type="text/javascript" src="../src/unicode/categ_letters_numbers.js"></script>
+    <script type="text/javascript" src="../src/unicode/normalizer_lowercase_nomark.js"></script>
+    <script type="text/javascript" src="../src/unicode/normalizer_lowercase.js"></script>
+    <script type="text/javascript" src="../src/unicode/unicode.js"></script>
+    <script type="text/javascript" src="../src/analyzers.js"></script>
+    <script type="text/javascript" src="../src/normalizers.js"></script>
+    <script type="text/javascript" src="../src/utils.js"></script>
+    <script type="text/javascript" src="../src/normalizers/english/porter-stemmer.js"></script>
 
-<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
-<link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-git.css"></link>
-
-<script type="text/javascript" src="test-normalizers.js"></script>
+    <script type="text/javascript" src="test-normalizers.js"></script>
 
 <style TYPE="text/css">
 
