--- a/tests/resultsets.html
+++ b/tests/resultsets.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Javascript Search Engine : Analyzers testing</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script type="text/javascript" src="../src/resultsets.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
-<link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-git.css"></link>
-<script type="text/javascript" src="test-resultsets.js"></script>
+    <script src="libs/jquery-1.8.2.min.js"></script>
+    <script src="libs/qunit-1.10.0.js"></script>
+    <link rel="stylesheet" type="text/css" href="libs/qunit-1.10.0.css" />
+
+    <script type="text/javascript" src="../src/resultsets.js"></script>
+    <script type="text/javascript" src="test-resultsets.js"></script>
 
 <style TYPE="text/css">
 
