--- a/tests/stores.html
+++ b/tests/stores.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Javascript Search Engine : Stores testing</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script src="libs/jquery-1.8.2.min.js"></script>
+    <script src="libs/qunit-1.10.0.js"></script>
+    <link rel="stylesheet" type="text/css" href="libs/qunit-1.10.0.css" />
+
 <script type="text/javascript" src="../src/resultsets.js"></script>
 <script type="text/javascript" src="../src/analyzers.js"></script>
 <script type="text/javascript" src="../src/stores/memory_store.js"></script>
@@ -12,10 +15,6 @@
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/resultsets.js"></script>
 <script type="text/javascript" src="../src/capabilities.js"></script>
-
-
-<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
-<link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-git.css"></link>
 
 <script type="text/javascript" src="common-testutils.js"></script>
 <script type="text/javascript" src="test-stores.js"></script>
