Fixed trailing double quote in animals.html example.

--- a/examples/animals/animals.html
+++ b/examples/animals/animals.html
@@ -41,7 +41,7 @@ div.resultbox {
 }
 textarea.typebox {
 	float: left;
-	width: 300px; height: 200px; margin:1em;"
+	width: 300px; height: 200px; margin:1em;
 	color: black; background-color: white;
 }
 </style>
