--- a/tests/normalizers.html
+++ b/tests/normalizers.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="../src/normalizers.js"></script>
     <script type="text/javascript" src="../src/utils.js"></script>
     <script type="text/javascript" src="../src/normalizers/english/porter-stemmer.js"></script>
+    <script type="text/javascript" src="../src/normalizers/english/metaphone.js"></script>
+    <script type="text/javascript" src="../src/normalizers/english/stopword-remover.js"></script>
 
     <script type="text/javascript" src="test-normalizers.js"></script>
 
